sweet: overlay: Migrate "rounded_corner_content_padding"
This CL updates resource overlay of

  rounded_corner_content_padding

for sunsish so that the same device-specific value can be seen from
both the Framework code and the SysUI.

With my previous CL [1], the SysUI continues to see the same value
even after this migration.

 [1]: I0c3717c0bdfc928167c6eba06247b37caabf33b9
      24d6b891f572f7be419d3acc9793ca68d062cf35

Bug: 215554582
Test: presubmit
Change-Id: I0464cd8cd08a26381a026497fb5ee332842b1d96

--- a/overlay/Frameworks/res/values/dimens.xml
+++ b/overlay/Frameworks/res/values/dimens.xml
@@ -18,6 +18,9 @@
 */
 -->
 <resources>
+    <!-- Padding around the status bar -->
+    <dimen name="rounded_corner_content_padding">50px</dimen>
+
     <!-- Radius of the software rounded corners at the bottom of the display in its natural
         orientation. If zero, the value of rounded_corner_radius is used. -->
     <dimen name="rounded_corner_radius_bottom">102.0px</dimen>
